# web-audit2

./: .gitignore  .python-version  app.py  pyproject.toml  requirements.txt  streamlit_schema1.py
Data/: images_missing_alt_text.csv  internal_html_efax.csv
